io.c: do not swallow exceptions at end of block

* io.c (io_close): ignore only "closed stream" IOError and
  NoMethodError, do not swallow other exceptions at the end of
  block.  [ruby-core:64463] [Bug #10153]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@47288 b2dd03c8-39d4-4d8f-98ff-823fe69b080e